adding authorization header to swagger
