# domain/auth/handler/http_handler/get_user_by_role.go
@@ -25,6 +25,10 @@ type SwaggerGetUserByRoleResponse struct {
 
 // swagger:parameters GetUserByRoleQuery
 type SwaggerGetUserByRoleQuery struct {
+	// in: header
+	// required: true
+	// example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
+	Authorization string
 	// in: query
 	// example: admin
 	Role string
